# numparse

./: .gitignore  README.md  pyproject.toml
src/numparse/: __init__.py  _core.py
tests/: test_bytes_duration_percent.py  test_parse.py
